# F-Man

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  readme.md
Fman Tests/: compressed  compressed_bigger_block  compressed_complex  uncompressed  uncompressed_complex
include/FileManager/: Archive.hpp  FileManager.hpp  MemoryFile.hpp  Memoryfs.hpp  Serializable.hpp
include/FileManager/archive/: rezip.hpp  zip.hpp
include/FileManager/comp/: Archive.hpp  Options.hpp  deflate_stream.hpp  inflate_stream.hpp
include/FileManager/comp/archive/: rezip.hpp  zip.hpp
include/FileManager/compression/: zip.hpp
include/FileManager/compression/archive/: zip.hpp
include/FileManager/internal/: Definitions.hpp  FileManager_internal.hpp  pch.hpp
include/FileManager/util/: CompressionStreams.hpp  Unzip.hpp  compression_streams.hpp  compression_utils.hpp  zip.hpp
include/FileManager/vfs/: MemoryFile.hpp  Memoryfs.hpp  Vfs.hpp
include/varf/: FileManager.hpp
include/varf/archive/: rezip.hpp  zip.hpp
include/varf/vfs/: Vfs.hpp
scripts/: zip.py
src/: FileManager.cpp  FileManager_internal.cpp  FileManager_internal.hpp  Serializable.cpp  pch.hpp
src/archive/: rezip.cpp  zip.cpp
src/comp/: deflate_stream.cpp  inflate_stream.cpp
src/comp/archive/: rezip.cpp  zip.cpp
src/compression/: CompressionStreams.cpp
src/compression/archive/: rezip.cpp  zip.cpp
src/internal/: FileManager_internal.cpp  FileManager_internal.hpp  pch.hpp
src/scripts/: embed_resources.cpp
src/util/: CompressionStreams.cpp  Unzip.cpp  compression_streams.cpp  compression_utils.cpp  zip.cpp
src/vfs/: MemoryFile.cpp  Memoryfs.cpp  Vfs.cpp
tests/: test.cpp  test_filemanager.cpp  test_serialization.cpp  test_unzip.cpp  test_vfs.cpp  test_zip_file.cpp
